--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "10.4.17",
     "geist": "^1.2.1",
     "next": "latest",
+    "pnpm": "^9.1.4",
     "postcss": "8.4.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
